a contribution to the ovnis

--- a/solucion.ipynb
+++ b/solucion.ipynb
@@ -5,7 +5,15 @@
    "metadata": {},
    "source": [
     "# Datathon the Interbank\n",
-    "Este cuaderno contiene las respuestas a las preguntas publicadas en la competencia Datathon de Interbank"
+    "Este cuaderno contiene las respuestas a las preguntas publicadas en la competencia Datathon de Interbank.\n",
+    "\n",
+    "**Nombre del equipo:** Quatum Blockchain AI.\n",
+    "\n",
+    "**Integrantes:**\n",
+    "- Carlos \n",
+    "- Cristian\n",
+    "- David\n",
+    "- Sebastián"
    ]
   },
   {
@@ -27,48 +35,22 @@
    "metadata": {},
    "source": [
     "1. Qué emplearías para reducier la dimensionalidad de variables cualitativas?\n",
+    "    Para reducir la dimensionalidad de variables categoricas se puede usar [MCA](https://en.wikipedia.org/wiki/Multiple_correspondence_analysis) o [CAPTCA](https://www.ncbi.nlm.nih.gov/pubmed/22176263).\n",
+    "\n",
     "2. Las metodologías que se utilizan para medir la eficacia de los modelos de propensión de variable cualitativa o modelos de clasificación son diversas, mencione 2 de ellas y las características fundamentales de ellas.\n",
+    "\n",
     "3. El modelamiento usualmente requiere alterar las muestras, esto es conocido como oversampling, luego del modelamiento, es posible corregir dichas probabilidades para volver a su distribución original? Cómo?\n",
+    "    Asumiendo que el modelo es una regresion softmax, \n",
+    "        **Nota:** el oversampling no altera las muestras, altera la distrubucion de las caracteristicas sobre el conjunto de datos.\n",
+    "\n",
     "4. Cuál es el valor agregado de un Modelo predictivo Bayesiano sobre un Modelo de Machine Learning?\n",
-    "5. Mencione las diferencias y beneficios de trabajar con datos en la nube vs on premise."
+    "    **R//:**Los modelos Bayesianos permiten extraer intervalos de confianza sobre los resultados y al mismo tiempo permiten una mayor interpretabilidad de los resultados. \n",
+    "\n",
+    "5. Mencione las diferencias y beneficios de trabajar con datos en la nube vs on premise.\n",
+    "    Trabajar en la nube permite trabajar con grandes volúmenes de datos de forma efectiva, así como la disponibilidad de de equipos de cómputo especializados como GPU. Sin embargo, se incurre en varios tipos de costos: administración de la plataforma en la nube, capacitación de los desarrolladores o científicos, costos de cómputo y costos de almacenamiento.\n",
+    "\n",
+    "    Por otro lado, trabajar *on premise* o en un entorno local, permite iterar más rápidamente sobre las alternativas de solución disponibles, aunque solo es efectivo cuando se tienen bajos volúmenes de datos y se itera con modelos pequeños."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Respuestas**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -79,11 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import math"
    ]
   },
   {
@@ -95,10 +78,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_fibonacci_index(n):\n",
+    "    \"\"\"\n",
+    "    Find the index of a given fibonacci number n.\n",
+    "    If the provided number is not an interger, it will be casted as such.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    n = int(n)\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n < 0:\n",
+    "        raise RunTimeError(\"Fibonnacci numbers are only defined for positive integers\")\n",
+    "    else:\n",
+    "        eps = 10**-10\n",
+    "        phi = (1+math.sqrt(5))/2 \n",
+    "        fibonacci_index = int(round(math.log(n * math.sqrt(5)+eps)/math.log(phi)))\n",
+    "        return fibonacci_index\n",
+    "\n",
+    "def fib(idx):\n",
+    "    phi = (1+math.sqrt(5))/2\n",
+    "    return math.floor((phi**idx)/math.sqrt(5) + 0.5)\n",
+    "        \n",
+    "def prev_two_fibonacci(n):\n",
+    "    \"\"\"\n",
+    "    Find the previous two fibonacci's numbers given\n",
+    "    a fibonacci number.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    if n <= 0:\n",
+    "        raise RuntimeError(\"Zero is the first fibonacci number\")\n",
+    "    else:\n",
+    "        try:\n",
+    "            idx = find_fibonacci_index(n)\n",
+    "            \n",
+    "    return fib(idx-1), fib(idx-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4181, 2584)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prev_two_fibonacci(6765)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,8 +146,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nota**: consideramos que la pregunta está redactada equivocadamente. Según la imágen, se pregunta por la matrix transpuesta por la antidiagonal en lugar de la inversa."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +166,7 @@
        "       [41, 42, 43, 44]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,13 +191,13 @@
     "    Return:\n",
     "        The transposed matrix\n",
     "    \"\"\"\n",
-    "    source = np.copy(matrix)\n",
-    "    return source[::-1, ::-1].T"
+    "\n",
+    "    return matrix[::-1, ::-1].T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +209,7 @@
        "       [41, 31, 21, 11]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,11 +266,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Nota:** segun la pregunta, asumiremos que el arreglo de entrada a la función tiene una sola dimensión"
+   ]
   }
  ],
  "metadata": {
