--- a/solucion.ipynb
+++ b/solucion.ipynb
@@ -34,10 +34,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Qué emplearías para reducier la dimensionalidad de variables cualitativas?\n",
+    "1. Qué emplearías para reducier la dimensionalidad de variables cualitativas?**R//:**\n",
     "    Para reducir la dimensionalidad de variables categoricas se puede usar [MCA](https://en.wikipedia.org/wiki/Multiple_correspondence_analysis) o [CAPTCA](https://www.ncbi.nlm.nih.gov/pubmed/22176263).\n",
     "\n",
-    "2. Las metodologías que se utilizan para medir la eficacia de los modelos de propensión de variable cualitativa o modelos de clasificación son diversas, mencione 2 de ellas y las características fundamentales de ellas.\n",
+    "2. Las metodologías que se utilizan para medir la eficacia de los modelos de propensión de variable cualitativa o modelos de clasificación son diversas, mencione 2 de ellas y las características fundamentales de ellas.**R//:** Entre los métodos de clasificación sobresalen las redes neuronales (incluyendo su versiones convolucional y recurrente), los cuales se cacterizan por aprender características importantes para la clasificación en lugar de los datos, lo cual se diferencia de otros métodos de machine learning; estos métodos además permiten modelar relaciones no lineales entre los datos. Otro método es la regresión logística, el cual está incialmente definido para problemas de clasificación binarios y permite estimar la probabilidad de una clase dados los datos, lo más importante de este método es que utiliza una función sigmoide para estimar esta probabilidad y que es un método lineal, por lo que usualmente requiere el diseño manual de algunas características relevantes para la clasificación.\n",
+    "    **Nota:** consideramos que no se debe usar indistinguidamente las palabras categórica y cualitativa; nuestra respuesta la realizamos asumiento que se referían a variables categóricas, es decir, las que se intentan predecir con los modelos de clasificación.\n",
     "\n",
     "3. El modelamiento usualmente requiere alterar las muestras, esto es conocido como oversampling, luego del modelamiento, es posible corregir dichas probabilidades para volver a su distribución original? Cómo?\n",
     "    Asumiendo que el modelo es una regresion softmax, \n",
