--- a/solucion.ipynb
+++ b/solucion.ipynb
@@ -10,10 +10,10 @@
     "**Nombre del equipo:** Quatum Blockchain AI.\n",
     "\n",
     "**Integrantes:**\n",
-    "- Carlos \n",
-    "- Cristian\n",
-    "- David\n",
-    "- Sebastián"
+    "- **Carlos Andres Alvarez** \n",
+    "- **Cristian Garcia:** *cgarcia.e88@gmail.com*\n",
+    "- **David Cardozo**\n",
+    "- **Sebastián Colinas**"
    ]
   },
   {
@@ -27,30 +27,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Preguntas**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Qué emplearías para reducier la dimensionalidad de variables cualitativas?**R//:**\n",
-    "    Para reducir la dimensionalidad de variables categoricas se puede usar [MCA](https://en.wikipedia.org/wiki/Multiple_correspondence_analysis) o [CAPTCA](https://www.ncbi.nlm.nih.gov/pubmed/22176263).\n",
+    "**1. Qué emplearías para reducier la dimensionalidad de variables cualitativas?**\n",
     "\n",
-    "2. Las metodologías que se utilizan para medir la eficacia de los modelos de propensión de variable cualitativa o modelos de clasificación son diversas, mencione 2 de ellas y las características fundamentales de ellas.**R//:** Entre los métodos de clasificación sobresalen las redes neuronales (incluyendo su versiones convolucional y recurrente), los cuales se cacterizan por aprender características importantes para la clasificación en lugar de los datos, lo cual se diferencia de otros métodos de machine learning; estos métodos además permiten modelar relaciones no lineales entre los datos. Otro método es la regresión logística, el cual está incialmente definido para problemas de clasificación binarios y permite estimar la probabilidad de una clase dados los datos, lo más importante de este método es que utiliza una función sigmoide para estimar esta probabilidad y que es un método lineal, por lo que usualmente requiere el diseño manual de algunas características relevantes para la clasificación.\n",
-    "    **Nota:** consideramos que no se debe usar indistinguidamente las palabras categórica y cualitativa; nuestra respuesta la realizamos asumiento que se referían a variables categóricas, es decir, las que se intentan predecir con los modelos de clasificación.\n",
+    "Para reducir la dimensionalidad de variables categoricas se puede usar [MCA](https://en.wikipedia.org/wiki/Multiple_correspondence_analysis) o [CAPTCA](https://www.ncbi.nlm.nih.gov/pubmed/22176263).\n",
     "\n",
-    "3. El modelamiento usualmente requiere alterar las muestras, esto es conocido como oversampling, luego del modelamiento, es posible corregir dichas probabilidades para volver a su distribución original? Cómo?\n",
-    "    Asumiendo que el modelo es una regresion softmax, \n",
-    "        **Nota:** el oversampling no altera las muestras, altera la distrubucion de las caracteristicas sobre el conjunto de datos.\n",
+    "**2. Las metodologías que se utilizan para medir la eficacia de los modelos de propensión de variable cualitativa o modelos de clasificación son diversas, mencione 2 de ellas y las características fundamentales de ellas.**\n",
     "\n",
-    "4. Cuál es el valor agregado de un Modelo predictivo Bayesiano sobre un Modelo de Machine Learning?\n",
-    "    **R//:**Los modelos Bayesianos permiten extraer intervalos de confianza sobre los resultados y al mismo tiempo permiten una mayor interpretabilidad de los resultados. \n",
+    "Entre los métodos de clasificación sobresalen las redes neuronales (incluyendo su versiones convolucional y recurrente), los cuales se cacterizan por aprender características importantes para la clasificación en lugar de los datos, lo cual se diferencia de otros métodos de machine learning; estos métodos además permiten modelar relaciones no lineales entre los datos. Otro método es la regresión logística, el cual está incialmente definido para problemas de clasificación binarios y permite estimar la probabilidad de una clase dados los datos, lo más importante de este método es que utiliza una función sigmoide para estimar esta probabilidad y que es un método lineal, por lo que usualmente requiere el diseño manual de algunas características relevantes para la clasificación.\n",
     "\n",
-    "5. Mencione las diferencias y beneficios de trabajar con datos en la nube vs on premise.\n",
-    "    Trabajar en la nube permite trabajar con grandes volúmenes de datos de forma efectiva, así como la disponibilidad de de equipos de cómputo especializados como GPU. Sin embargo, se incurre en varios tipos de costos: administración de la plataforma en la nube, capacitación de los desarrolladores o científicos, costos de cómputo y costos de almacenamiento.\n",
+    "**Nota:** consideramos que no se debe usar indistinguidamente las palabras categórica y cualitativa; nuestra respuesta la realizamos asumiento que se referían a variables categóricas, es decir, las que se intentan predecir con los modelos de clasificación.\n",
     "\n",
-    "    Por otro lado, trabajar *on premise* o en un entorno local, permite iterar más rápidamente sobre las alternativas de solución disponibles, aunque solo es efectivo cuando se tienen bajos volúmenes de datos y se itera con modelos pequeños."
+    "**3. El modelamiento usualmente requiere alterar las muestras, esto es conocido como oversampling, luego del modelamiento, es posible corregir dichas probabilidades para volver a su distribución original? Cómo?**\n",
+    "\n",
+    "Asumiendo que el modelo es una regresion logistica, la formula de correcion para el intercepto es\n",
+    "\n",
+    "$\n",
+    "\\alpha_0 = \\alpha_1 + \\log \\frac{r_1( 1 - p_0)}{p_0 (1 - r_1) }\n",
+    "$\n",
+    "\n",
+    "donde\n",
+    "* $\\alpha_0$ es el intercepto de la distribucion original\n",
+    "* $\\alpha_1$ es el intercepto de la distribucion con oversampling\n",
+    "* $r_1$ es la proporcion de las clases despues de oversampling\n",
+    "* $p_0$ es la proporcion de las clases antes de oversampling\n",
+    "\n",
+    "Ahora solo tenemos que reemplazar este intercepto por el intercepto que encontro el algoritmo.\n",
+    "\n",
+    "**Nota:** el oversampling no altera las muestras, altera la distrubucion de las caracteristicas sobre el conjunto de datos.\n",
+    "\n",
+    "**4. Cuál es el valor agregado de un Modelo predictivo Bayesiano sobre un Modelo de Machine Learning?**\n",
+    "    \n",
+    "Los modelos Bayesianos permiten extraer intervalos de confianza sobre los resultados y al mismo tiempo permiten una mayor interpretabilidad de los resultados. \n",
+    "\n",
+    "**5. Mencione las diferencias y beneficios de trabajar con datos en la nube vs on premise.**\n",
+    "\n",
+    "Trabajar en la nube permite trabajar con grandes volúmenes de datos de forma efectiva, así como la disponibilidad de de equipos de cómputo especializados como GPU. Sin embargo, se incurre en varios tipos de costos: administración de la plataforma en la nube, capacitación de los desarrolladores o científicos, costos de cómputo y costos de almacenamiento.\n",
+    "\n",
+    "Por otro lado, trabajar *on premise* o en un entorno local, permite iterar más rápidamente sobre las alternativas de solución disponibles, aunque solo es efectivo cuando se tienen bajos volúmenes de datos y se itera con modelos pequeños."
    ]
   },
   {
@@ -288,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
