an extraterrestial message

--- a/solucion.ipynb
+++ b/solucion.ipynb
@@ -10,10 +10,10 @@
     "**Nombre del equipo:** Quatum Blockchain AI.\n",
     "\n",
     "**Integrantes:**\n",
-    "- **Carlos Andres Alvarez** \n",
+    "- **Carlos Andres Alvarez:** *candres.alv@gmail.com* \n",
     "- **Cristian Garcia:** *cgarcia.e88@gmail.com*\n",
-    "- **David Cardozo**\n",
-    "- **Sebastián Colinas**"
+    "- **David Cardozo:** *germancho27@gmail.com*\n",
+    "- **Sebastián Colinas:** *srcolinas@gmail.com*"
    ]
   },
   {
@@ -33,7 +33,7 @@
     "\n",
     "**2. Las metodologías que se utilizan para medir la eficacia de los modelos de propensión de variable cualitativa o modelos de clasificación son diversas, mencione 2 de ellas y las características fundamentales de ellas.**\n",
     "\n",
-    "Entre los métodos de clasificación sobresalen las redes neuronales (incluyendo su versiones convolucional y recurrente), los cuales se cacterizan por aprender características importantes para la clasificación en lugar de los datos, lo cual se diferencia de otros métodos de machine learning; estos métodos además permiten modelar relaciones no lineales entre los datos. Otro método es la regresión logística, el cual está incialmente definido para problemas de clasificación binarios y permite estimar la probabilidad de una clase dados los datos, lo más importante de este método es que utiliza una función sigmoide para estimar esta probabilidad y que es un método lineal, por lo que usualmente requiere el diseño manual de algunas características relevantes para la clasificación.\n",
+    "Entre los métodos de clasificación sobresalen las redes neuronales (incluyendo su versiones convolucional y recurrente), los cuales se cacterizan por aprender características importantes para la clasificación a partir de los datos, lo cual se diferencia de otros métodos de machine learning; las redes neuronales además permiten modelar relaciones no lineales entre los datos. Otro método es la regresión logística, el cual está incialmente definido para problemas de clasificación binarios y permite estimar la probabilidad de una clase dados los datos, lo más importante de este método es que utiliza una función sigmoide para estimar esta probabilidad y que es un método lineal, por lo que usualmente requiere el diseño manual de algunas características relevantes para la clasificación.\n",
     "\n",
     "**Nota:** consideramos que no se debe usar indistinguidamente las palabras categórica y cualitativa; nuestra respuesta la realizamos asumiento que se referían a variables categóricas, es decir, las que se intentan predecir con los modelos de clasificación.\n",
     "\n",
@@ -301,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
